fixed contrast errors

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -414,23 +414,19 @@ form label input:required:valid {
 }
 
 .call-to-action {
-    position: relative;
     grid-column: 1/2;
     grid-row: 1/2;
     background-image: url("../images/banner.webp");
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     height: 300px;
 }
 
 .call-to-action h1 {
     color: white;
-    text-shadow: 0.2rem 0.2rem 0.1rem black;
-    padding: 20px 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px 20px;
 }
 
 .join-button {
@@ -485,6 +481,12 @@ form label input:required:valid {
 #weather-icon {
     width: 128px;
     height: auto;
+    margin: auto;
+}
+
+#weather-icon[src="images/error.png"] {
+    width: 80px;
+    height: auto;
 }
 
 .source {
@@ -497,13 +499,9 @@ form label input:required:valid {
     grid-template-columns: repeat(2, 1fr);
 }
 
-.weather-info img {
-    display: block;
-    margin: auto;
-}
-
 .weather-info h3 {
     font-size: 3rem;
+    margin: auto;
 }
 
 #weather-condition {
